@@ -1015,6 +1015,7 @@ nuttx-0.3.11 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fix several FAT filesystem problems reported by kwonsk (Changes not yet
 	  verified).
 	* Host simulator no longer uses Linux system calls directly; Now works with Cygwin.
+	* Fix an error that occurs when a POSIX timer is deleted by the timer signal handler.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
