@@ -1,7 +1,7 @@
 /********************************************************************************
  * timer_internal.h
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -49,7 +49,12 @@
  * Definitions
  ********************************************************************************/
 
-#define PT_FLAGS_PREALLOCATED 0x01
+#define PT_FLAGS_PREALLOCATED 0x01 /* Timer comes from a pool of preallocated timers */
+#define PT_FLAGS_BUSY         0x02 /* Timer cannot be deleted now */
+#define PT_FLAGS_DELETED      0x04 /* Busy timer marked for deletion */
+
+#define PT_FLAGS_STATIC       PT_FLAGS_PREALLOCATED
+#define PT_FLAGS_DYNAMIC      (~PT_FLAGS_STATIC)
 
 /********************************************************************************
  * Public Types
